# python_template_rye

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements-test.txt
.github/workflows/: cicd-pipeline.yml  lint.yml  test.yml
src/: logger_config.yaml  main.py  sub.py
src/common/: configs.py  logger.py
tests/: conftests.py
tests/sub/: conftest.py  test_sub.py
